<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_register_question"
        android:layout_width="235dp"
        android:layout_height="99dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/acme"
        android:text="@string/registration_question"
        android:textColor="#353333"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/button_register_continue"
        android:layout_width="274dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/capsule"
        android:backgroundTint="@null"
        android:hapticFeedbackEnabled="false"
        android:text="@string/registration_continue"
        android:textAllCaps="false"
        android:textColor="#3A3535"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_username"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_register_username"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/username"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingHorizontal="30sp"
        android:textColorHighlight="#100F0F"
        android:textColorHint="#353333"
        android:textColorLink="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_register_question" />

    <ImageButton
        android:id="@+id/button_register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/button_to_get_to_prev_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>