<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivitya">

    <ImageView
        android:id="@+id/image_login_homebanner"
        android:layout_width="418dp"
        android:layout_height="367dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_banner" />

    <TextView
        android:id="@+id/text_login_tagline"
        android:layout_width="307dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/login_tag_line"
        android:fontFamily="@font/acme"
        android:gravity="center_horizontal"
        android:text="@string/login_tag_line"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#353333"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_login_homebanner"
        tools:text="@string/login_tag_line" />

    <android.widget.Button
        android:id="@+id/button_login_google"
        android:layout_width="347dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/capsule"
        android:elegantTextHeight="true"
        android:text="@string/login_google"
        android:textAllCaps="false"
        android:textColor="#676767"
        android:textSize="16sp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login_tagline" />

    <android.widget.Button
        android:id="@+id/button_login_guest"
        android:layout_width="347dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/capsule"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/login_guest"
        android:textAllCaps="false"
        android:textColor="#676767"
        android:textSize="16sp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_google" />

    <TextView
        android:id="@+id/text_login_terms"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginBottom="56dp"
        android:gravity="center_horizontal"
        android:text="@string/login_terms_statement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_guest"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>